# aicode

./: .gitignore  MANIFEST.in  README.md  activate  activate.sh  clean  install  lint  pyproject.toml  setup.py  test  upload_package.sh
.github/workflows/: lint.yml  push_macos.yml  push_ubuntu.yml  push_win.yml  run_macos_install.yml
src/aicode/: __init__.py  __main__.py  aider_control.py  aider_trampoline.py  aider_update_result.py  args.py  background.py  build_cmd_list.py  cli.py  cli_test.py  config.py  install_aider.py  main.py  models.py  openaicfg.py  paths.py  run_process.py  util.py
tests/: test_aicode_o3.py.disabled  test_aider_install.py  test_aider_upgrade.py  test_cli.py  test_extract_version_string.py  test_message.py  test_update_string_if_out_of_date.py
